--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -3,14 +3,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.CategoryFragment"
-    android:layout_marginTop="@dimen/_30sdp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragments.CategoryFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rv"
-        android:layout_centerHorizontal="true"/>
+        android:orientation="vertical">
+
+        <androidx.cardview.widget.CardView
+            android:layout_marginTop="2dp"
+            app:cardCornerRadius="8dp"
+            android:layout_marginLeft="@dimen/_18sdp"
+            android:layout_marginRight="@dimen/_18sdp"
+            android:layout_width="match_parent"
+            android:elevation="1dp"
+            android:layout_height="wrap_content">
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/sv"
+                android:queryBackground="@android:color/transparent"
+                app:queryBackground="@android:color/transparent"
+                android:iconifiedByDefault="false"
+                app:iconifiedByDefault="false"
+                app:defaultQueryHint="Search Category"
+                android:layout_width="match_parent"
+                android:queryHint="Search Here"
+                android:layout_height="wrap_content"/>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rv"
+            android:layout_centerHorizontal="true"/>
+    </LinearLayout>
+
+
 
 
 </RelativeLayout>
