--- a/app/src/main/res/layout/activity_add_category.xml
+++ b/app/src/main/res/layout/activity_add_category.xml
@@ -52,6 +52,7 @@
         android:gravity="center"
         android:orientation="vertical">
         <EditText
+            android:layout_marginTop="@dimen/_10sdp"
             android:id="@+id/EditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -92,11 +93,19 @@
             android:layout_marginTop="@dimen/_10sdp"
             android:fontFamily="@font/handosoftbold" />
 
-        <ImageView
+        <androidx.cardview.widget.CardView
+            android:id="@+id/bg"
+            android:padding="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_10sdp"
-            android:id="@+id/CatgoryImage"
-            android:layout_width="@dimen/_100sdp"
-            android:layout_height="@dimen/_100sdp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_margin="@dimen/_10sdp"
+                android:id="@+id/CatgoryImage"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="@dimen/_100sdp" />
+        </androidx.cardview.widget.CardView>
+
 
 
 
