--- a/app/src/main/res/layout/activity_edit_category.xml
+++ b/app/src/main/res/layout/activity_edit_category.xml
@@ -8,37 +8,37 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        app:contentInsetEnd="0dp"
-        app:contentInsetStart="0dp"
-        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_5sdp"
         android:background="@color/white"
-        android:layout_marginTop="@dimen/_5sdp">
+        android:gravity="center"
+        app:contentInsetEnd="0dp"
+        app:contentInsetStart="0dp">
 
         <ImageView
             android:id="@+id/back"
             android:layout_width="@dimen/_11sdp"
             android:layout_height="@dimen/_11sdp"
             android:layout_marginLeft="@dimen/_18sdp"
-            android:src="@drawable/back"/>
+            android:src="@drawable/back" />
 
         <TextView
-            android:layout_gravity="center"
             android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_32sdp"
-            android:text="Edit Category"
-            android:textSize="@dimen/_20sdp"
-            android:textColor="@color/black"
+            android:layout_gravity="center"
+            android:fontFamily="@font/handosoftbold"
             android:gravity="center_vertical"
-            android:fontFamily="@font/handosoftbold"/>
+            android:text="Edit Category"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_20sdp" />
 
         <ImageView
             android:id="@+id/upload"
-            android:layout_gravity="end"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
+            android:layout_gravity="end"
             android:layout_marginRight="@dimen/_20sdp"
             android:src="@drawable/save" />
 
@@ -46,22 +46,24 @@
 
 
     <LinearLayout
-        android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar"
         android:layout_marginTop="@dimen/_25sdp"
         android:gravity="center"
         android:orientation="vertical">
+
         <EditText
             android:id="@+id/EditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/black"
-            android:textColorHint="#BCBCBC"
-            android:textColor="@color/black"
             android:layout_marginStart="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_30sdp"
-            android:hint="Enter new category name"/>
+            android:backgroundTint="@color/black"
+            android:hint="Enter new category name"
+            android:textColor="@color/black"
+            android:textColorHint="#BCBCBC" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -72,31 +74,41 @@
                 android:id="@+id/colorPicker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pick Color"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_5sdp"
-                android:fontFamily="@font/handosoftbold" />
+                android:fontFamily="@font/handosoftbold"
+                android:text="Pick Color" />
+
             <Button
                 android:id="@+id/materialColor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pick Material Color"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:fontFamily="@font/handosoftbold" />
+                android:fontFamily="@font/handosoftbold"
+                android:text="Pick Material Color" />
         </LinearLayout>
+
         <Button
             android:id="@+id/uploadImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Replace Image"
             android:layout_marginTop="@dimen/_10sdp"
-            android:fontFamily="@font/handosoftbold" />
-        <ImageView
-            android:layout_marginTop="@dimen/_10sdp"
-            android:id="@+id/CatgoryImage"
-            android:layout_width="@dimen/_100sdp"
-            android:layout_height="@dimen/_100sdp"/>
+            android:fontFamily="@font/handosoftbold"
+            android:text="Replace Image" />
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/bg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:padding="@dimen/_10sdp">
+
+            <ImageView
+                android:id="@+id/CatgoryImage"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="@dimen/_100sdp"
+                android:layout_margin="@dimen/_10sdp" />
+        </androidx.cardview.widget.CardView>
 
 
     </LinearLayout>
