--- a/app/src/main/res/layout/my_selected_item.xml
+++ b/app/src/main/res/layout/my_selected_item.xml
@@ -2,7 +2,8 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:textSize="24dp"
+    android:textSize="@dimen/_18sdp"
+    android:fontFamily="@font/handosoftbold"
     android:textColor="#0000FF"
     android:padding="5dp"
     android:id="@+id/selectedItem" />
