--- a/app/src/main/res/layout/activity_passcode.xml
+++ b/app/src/main/res/layout/activity_passcode.xml
@@ -18,6 +18,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/entPass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -25,10 +26,14 @@
             android:fontFamily="@font/handosoftbold"
             android:text="Enter passcode!"
             android:textColor="@color/white"
+            android:gravity="center"
+            android:textAlignment="center"
             android:textSize="@dimen/_20sdp" />
         <TextView
             android:visibility="gone"
             android:id="@+id/error"
+            android:gravity="center"
+            android:textAlignment="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -85,6 +90,7 @@
             app:cardElevation="0dp">
 
             <TextView
+                android:id="@+id/confirmtv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
