--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -73,8 +73,7 @@
             android:id="@+id/fragmentView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_horizontal"
-            tools:layout="@layout/fragment_category">
+            android:gravity="center_horizontal">
         </androidx.fragment.app.FragmentContainerView>
 
 
