--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -19,6 +19,7 @@
             android:layout_margin="@dimen/_20sdp"
             android:textColorHint="@color/white"
             android:hint="Enter feedback"
+            android:fontFamily="@font/handosoftbold"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_200sdp"
             android:background="@drawable/strokebox"
@@ -33,7 +34,7 @@
             android:id="@+id/send"
             android:layout_width="match_parent"
             android:layout_marginTop="@dimen/_30sdp"
-            android:layout_height="@dimen/_45sdp"
+            android:layout_height="@dimen/_40sdp"
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="@dimen/_70sdp"
             android:layout_marginRight="@dimen/_70sdp"
